--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
   <head>
     <title>Web Programming Class Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+        <nav class="navbar">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
     <h1>Welcome to Nhan's Portfolio</h1>
     <b>This will have my portfolio for all my files</b>
   </body>
