--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#hobbies">Hobbies</a></li>
-            <li><a href="#pictures">Pictures</li>
+            <li><a href="#pictures">Pictures</a></li>
           </ul>
         </nav>
     <h1>Welcome to Nhan's Portfolio</h1>
