--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
         <nav class="navbar">
           <ul>
-            <li><a href=index.html>Home</a></li>
-            <li><a href=about.html>About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#hobbies">Hobbies</a></li>
             <li><a href="#pictures">Pictures</a></li>
           </ul>
