--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
   <body>
         <nav class="navbar">
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#hobbies">Hobbies</a></li>
-            <li><a href="#pictures">Pictures</li>
+            <li><a href="#pictures">Pictures</a></li>
           </ul>
         </nav>
     <h1>About Me!</h1>
