--- a/about.html
+++ b/about.html
@@ -16,6 +16,17 @@
           </ul>
         </nav>
     <h1>About Me!</h1>
-    <b></b>
+    <b>
+      <p>
+        Hello! My name is Nhan Nguyen.  The simple pronounciation of my name is "Na-an Wh-in".
+        Its quite a simple name to pronounce, but can throw people off because of the spelling.
+        I'm a 1st generation American with Vietnamese ancestors with my parents being the first to arrive in the states!
+        A little about myself: I'm 29, going on 30 with strong interests in software development. When I was a kid,
+        I had strong interests in games.  Spending hours and hours, learning the different worlds that others
+        created for me was so interesting.  I had nothing but respect for the story tellers of the digital age.
+        In my adolescence and late teens, learning to code never became reality.  My schools never taught it as a class and I
+        never found a chance to learn.  In my early adult life, I enlisted in the military.  "The world is my oyster"... so I thought.
+      </p>
+    </b>
   </body>
 </html>
