--- a/about.html
+++ b/about.html
@@ -18,15 +18,18 @@
     <h1>About Me!</h1>
     <b>
       <p>
-        Hello! My name is Nhan Nguyen.  The simple pronounciation of my name is "Na-an Wh-in".
-        Its quite a simple name to pronounce, but can throw people off because of the spelling.
-        I'm a 1st generation American with Vietnamese ancestors with my parents being the first to arrive in the states!
-        A little about myself: I'm 29, going on 30 with strong interests in software development. When I was a kid,
-        I had strong interests in games.  Spending hours and hours, learning the different worlds that others
-        created for me was so interesting.  I had nothing but respect for the story tellers of the digital age.
-        In my adolescence and late teens, learning to code never became reality.  My schools never taught it as a class and I
-        never found a chance to learn.  In my early adult life, I enlisted in the military.  "The world is my oyster"... so I thought.
-      </p>
+        Hello! My name is Nhan Nguyen. The correct pronounciation is quite difficult so most people just call me "Na-an Wh-in".
+        The name comes from Vietnam, so the spelling is confusing for most Americans.  During the Vietnam war, my parents fled the war torned country to find a 
+        small town in Michigan named Grand Rapids.  They flocked to the industrial and economic boom at the time, hoping to find themselves in Detroit.  My father,
+        found success working his way up with General Motors.  My mother worked a nail salon across the street from the factory my dad worked at.  One thing led to
+        another and my mother found herself pregnant, only for the great General Motors bubble to burst.  My father had to quit his job and join my mother at her
+        nail salon.<br><br>
+
+        I was born in November 25th, 1994, having joined the military as my primary profession.  Some of my favorite activities include: Cooking, Sports, and Gaming.
+        Food from other cultures are so interesting to me, and that curiosity led me to become decent at cooking.  I love cooking soups, noodle dishes, bento boxes and
+        anything fried.  My favorite sports are: Volleyball, tennis, and soccer.  Playing sports is always significantly more fun then watching sports however, I have
+        a soft spot for my home towns teams.  Ever since I was young, gaming has been close to my heart.  It's what propelled me into software development in the first
+        place.  The stories that can be told, the communties that get built, nothing beats playing a good video game.
     </b>
   </body>
 </html>
