--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#hobbies">Hobbies</a></li>
-            <li><a href="#pictures">Pictures</a></li>
+            <li><a href="hobbies.html">Hobbies</a></li>
+            <li><a href="pictures.html">Pictures</a></li>
           </ul>
         </nav>
     <h1>About Me!</h1>
