--- a/pictures.html
+++ b/pictures.html
@@ -16,6 +16,7 @@
           </ul>
         </nav>
     <h1>Pictures</h1>
-    
+    <img src="Cats.jpg" alt="Picture of my cats">
+    <img src="MeAndWife.jpg" alt="Picture of me and my wife">
   </body>
 </html>
