--- a/pictures.html
+++ b/pictures.html
@@ -16,7 +16,7 @@
           </ul>
         </nav>
     <h1>Pictures</h1>
-    <img src="Cats.jpg" alt="Picture of my cats">
-    <img src="MeAndWife.jpg" alt="Picture of me and my wife">
+    <img src="Cats.jpg" alt="Picture of my cats" width="400" height="400">
+    <img src="MeAndWife.jpg" alt="Picture of me and my wife" width="400" height="400">
   </body>
 </html>
