--- a/unit2_form.html
+++ b/unit2_form.html
@@ -1,6 +1,10 @@
 <!DOCTYPE HTML>
   <html>
     <head>
+      <title>Form with 10 Fields/Elements</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="styles.css">
     </head>
     <body>
     </body
