--- a/unit2_form.html
+++ b/unit2_form.html
@@ -7,5 +7,10 @@
       <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+      <form>
+        <label for="product">RTX4090: 900$<br></label>
+        <label for="qty">Quantity<br></label>
+        <input type="text" id="amount" name="amount"><br>
+      </form>
     </body
   </html>
