--- a/unit2_form.html
+++ b/unit2_form.html
@@ -11,6 +11,7 @@
         <label for="product">RTX4090: 900$<br></label>
         <label for="qty">Quantity<br></label>
         <input type="text" id="amount" name="amount"><br>
+        <input type="submit" value="Purchase">
       </form>
     </body
   </html>
