--- a/unit2_form.html
+++ b/unit2_form.html
@@ -19,7 +19,7 @@
         <input type="text" id="amount" name="amount"><br>
         <input type="submit" value="Calculate Total"/>
       </form>
-      <p id="total"></p>
+      <p id="total">0</p>
       <script src="script.js"></script>
     </body
   </html>
