--- a/unit2_form.html
+++ b/unit2_form.html
@@ -17,7 +17,7 @@
         <label for="rtx4070">RTX 4070: 600$<br></label>
         <label for="qty">Quantity<br></label>
         <input type="text" id="amount" name="amount"><br>
-        <input type="submit" value="Calculate Total"/>
+        <input type="submit" id="total" value="Calculate Total"/>
       </form>
       <p id="total">0</p>
       <script src="script.js"></script>
