--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
   </head>
   <body>
         <nav class="navbar">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="hobbies.html">Hobbies</a></li>
-            <li><a href="pictures.html">Pictures</a></li>
-          </ul>
+          <div class="navbar-left">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="hobbies.html">Hobbies</a></li>
+              <li><a href="pictures.html">Pictures</a></li>
+            </ul>
+          </div>
+          <div class="navbar-right">
+            <ul>
+              <li>Terms</li>
+              <li>Images</li>
+              <li>Multimedia Page</li>
+              <li>Links</li>
+              <li>User Design</li>
+            </ul>
+          </div>
         </nav>
     <h1>Welcome to Nhan's Portfolio</h1>
     <b>This will have my portfolio for all my files</b>
