--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           </div>
           <div class="navbar-right">
             <ul>
-              <li>Terms</li>
-              <li>Images</li>
-              <li>Multimedia Page</li>
-              <li>Links</li>
-              <li>User Design</li>
+              <li><a href="terms.html">Terms</a></li>
+              <li><a href="images.html">Images</a></li>
+              <li><a href="images.html">Multimedia Page</a></li>
+              <li><a href="links.html">Links</a></li>
+              <li><a href="user-design.html">User Design</a></li>
             </ul>
           </div>
         </nav>
