--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
         </nav>
     <h1>Welcome to Nhan's Portfolio</h1>
     <b>This will have my portfolio for all my files</b>
+    <b><a href="how-to.html">Click here to learn how to Spike a volleyball</a></b>
   </body>
 </html>
