--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
         </nav>
     <h1>Welcome to Nhan's Portfolio</h1>
-    <b>This will have my portfolio for all my files</b>
+    <b>This will have my portfolio for all my files<br></b>
     <b><a href="how-to.html">Click here to learn how to Spike a volleyball</a></b>
   </body>
 </html>
