--- a/how-to.html
+++ b/how-to.html
@@ -35,8 +35,8 @@
     The most basic form of offense is the ability to "spike" a volleyball.  Once you've understood how, real volleyball is played.
     Volleyball is a game of technique combined with natural and developed athleticism.
     I would be lying to you if I said your height isn't important.  The higher you can reach when you jump, the better your chances of scoring.
-    Players who are shorter still can play by utilizing proper technique.
-    
+    Players who are shorter still can play by utilizing proper technique.<br>
     </b>
+    <img src="Cats.jpg" alt="Picture of my cats" width="400" height="400">
   </body>
 </html>
