add correct image

--- a/how-to.html
+++ b/how-to.html
@@ -37,6 +37,6 @@
     I would be lying to you if I said your height isn't important.  The higher you can reach when you jump, the better your chances of scoring.
     Players who are shorter still can play by utilizing proper technique.<br>
     </b>
-    <img src="Cats.jpg" alt="Picture of my cats" width="400" height="400">
+    <img src="Volleyball Spike.jpeg" alt="Picture of guy spiking volleyball" width="400" height="400">
   </body>
 </html>
