adding more text

--- a/how-to.html
+++ b/how-to.html
@@ -26,7 +26,8 @@
             </ul>
           </div>
         </nav>
-    <h1>A guide on spiking a volleyball</h1>
+        <img src="Volleyball Spike.jpeg" alt="Picture of guy spiking volleyball" width="463" height="400">
+    <h1>Introduction to the Attack</h1>
     <b>Understanding the fundementals of volleyball is extremely important to understanding the roles each player has.
     The basic idea to volleball is to not let the ball touch the floor on your side, and to make it touch the other teams side.
     Each time the ball touches the floor, one team gets a point.
@@ -35,8 +36,16 @@
     The most basic form of offense is the ability to "spike" a volleyball.  Once you've understood how, real volleyball is played.
     Volleyball is a game of technique combined with natural and developed athleticism.
     I would be lying to you if I said your height isn't important.  The higher you can reach when you jump, the better your chances of scoring.
-    Players who are shorter still can play by utilizing proper technique.<br>
+    Players who are shorter still can play by utilizing proper technique.<br><br>
     </b>
-    <img src="Volleyball Spike.jpeg" alt="Picture of guy spiking volleyball" width="400" height="400">
+    <h1>How to attack</h1>
+    <p>During a game of volleyball, there is a player called the "setter".
+      This person is the main tactition of the team.  They will decide who will be attacking.
+      The setter should throw the ball high enough for you to hit the ball downward with top spin.
+      This means you will be required to jump with precision, react with accuracy, and strike with timing.
+      The theory is extremely easy to understand but the executing, especially during a game, can be tricky.
+      You'll find that jumping at the right time can be tricky, striking high requires surgical precision,
+      and the perception to strike around a blocker isn't as easy as the explanation.
+    </p>
   </body>
 </html>
