--- a/how-to.html
+++ b/how-to.html
@@ -47,5 +47,10 @@
       You'll find that jumping at the right time can be tricky, striking high requires surgical precision,
       and the perception to strike around a blocker isn't as easy as the explanation.
     </p>
+    <h1>Step 1: Pre-Jumping</h1>
+    <p>Before even jumping, you will need to fine tune your approach to ensure you're consistant before nailing down the strike
+    Most people will do a similar approach to basketball.  They will step out with their non-dominant foot, then sprint to the jump
+    location using a two step approach.  Watch the video to understand what an approach should look like.<br><br></p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CSIhUzuAVAM?si=vaxnS-uUaeGbuQox" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
