change banner background and center

--- a/how-to.html
+++ b/how-to.html
@@ -26,7 +26,9 @@
             </ul>
           </div>
         </nav>
-        <img src="Volleyball Spike.jpeg" alt="Picture of guy spiking volleyball" width="463" height="400">
+        <div class="vb-banner">
+         <img src="Volleyball Spike.jpeg" alt="Picture of guy spiking volleyball" width="463" height="400">
+        </div>
     <h1>Introduction to the Attack</h1>
     <b>Understanding the fundementals of volleyball is extremely important to understanding the roles each player has.
     The basic idea to volleball is to not let the ball touch the floor on your side, and to make it touch the other teams side.
