--- a/how-to.html
+++ b/how-to.html
@@ -54,5 +54,20 @@
     Most people will do a similar approach to basketball.  They will step out with their non-dominant foot, then sprint to the jump
     location using a two step approach.  Watch the video to understand what an approach should look like.<br><br></p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/CSIhUzuAVAM?si=vaxnS-uUaeGbuQox" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1>Step 2: Jumping</h1>
+    <p>I hope you've prepared your legs because this is the trickiest part.  You'll need to condition your legs to be able to jump the highest you are capable of
+      Start training your legs via plyometrics to make your jump height higher.  After you've stretched and practiced your approach, you can try to jump.
+      When you jump, you want to be 45 degrees from the net.  It will prevent you from jumping into the net, resulting in a point for the other team.
+      Reach up with both hands like you want to catch the ball at the highest point of your jump.  To get the highest jump point possible, swing your arms forward
+      before catching the ball will add a few centimeters to your vertical.
+    </p>
+    <h1>Step 3: Hitting</h1>
+    <p>The most satisfying part of the spike is the slam from scoring the set.  The burning sensation from slamming the ball will be the highest high you feel.
+      It is what makes me come back for more.  The final step is to hit the ball with a upward spin to bring the point to the team.  This is achieved by imitating the Nike "Swoosh"
+      Placing your hitting arm back and preparing to swing requires consistancy to continue to practice.  Using your supporting arm, you'll aim for where you should swing.
+      Hitting the ball slightly in front, over your shoulder is key to achieving the perfect spike.
+      <br>
+    </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0QbYdEa28rc?si=FhE0HXA0NzjKJeT1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
