--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           </div>
         </nav>
     <h1>Welcome to Nhan's Portfolio</h1>
-    <b>This will have my portfolio for all my files<br></b>
+    <b>This will have my portfolio for all my files<br><br></b>
     <b><a href="how-to.html">Click here to learn how to Spike a volleyball</a></b>
+    <p>Please <a href="unit2_form.html">click here</a> to access my Unit 2 Assignment form</p>
+    <p><br>Please <a href="unit3-form.html">click here</a> to access my unit 3 assignment form</p>
   </body>
 </html>
