--- a/unit3-form.html
+++ b/unit3-form.html
@@ -18,6 +18,7 @@
       <label for="qty">Quantity<br></label>
       <input type="text" id="amount" name="amount"><br>
       <input type="submit" id="calculate" value="Calculate Total"/>
+      <b><br>If you spend over 2000 dollars, you'll recieve a 20% discount.</b>
     </form>
     <p id="total">0</p>
     <script src="script.js"></script>
