--- a/images.html
+++ b/images.html
@@ -26,6 +26,7 @@
             </ul>
           </div>
         </nav>
+    <h1>Images of Volleyball</h1>
     <img src="Volleyball Dive.jpeg" alt="Sand Volleyball Dive">
     <img src="Volleyball Block.jpeg" alt="Sand Volleyball Spike Block">
     <img src="Volleyball Spike.jpeg" alt="Indoor Volleyball Spike">
