--- a/multimedia.html
+++ b/multimedia.html
@@ -4,7 +4,7 @@
     <title>Web Programming Class Portfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="volleyballstylesheet.css">
   </head>
   <body>
         <nav class="navbar">
