--- a/images.html
+++ b/images.html
@@ -29,6 +29,7 @@
     <h1>Images of Volleyball</h1>
     <img src="Volleyball Dive.jpeg" alt="Sand Volleyball Dive">
     <img src="Volleyball Block.jpeg" alt="Sand Volleyball Spike Block">
-    <img src="Volleyball Spike.jpeg" alt="Indoor Volleyball Spike">
+    <img src="Volleyball Spike.jpeg" alt="Indoor Volleyball Spike"
+      style="width: 600px; height: 400px;>
   </body>
 </html>
