--- a/user-design.html
+++ b/user-design.html
@@ -40,6 +40,6 @@
       </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="loginscript.js"></script>
   </body>
 </html>
